Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
     "    intervals.append(sample_ci)\n",
     "\n",
     "print(\"Sample means: \", sample_means)\n",
-    "print(\"COnfidence intervals: \", intervals)\n"
+    "print(\"Cnfidence intervals: \", intervals)\n"
    ]
   },
   {
