Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,9 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-ad090f197a74>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-ad090f197a74>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    rand_sample = np.random.choice(pop_ages[0, sample_size)\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# set random seed for reproducability\n",
     "np.random.seed(12)\n",
@@ -405,7 +414,7 @@
     "    intervals.append(sample_ci)\n",
     "\n",
     "print(\"Sample means: \", sample_means)\n",
-    "print(\"Cnfidence intervals: \", intervals)\n"
+    "print(\"Confidence intervals: \", intervals)\n"
    ]
   },
   {
