Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,7 +403,7 @@
     "for sample in range(25):\n",
     "\n",
     "    # Take a random sample of chosen size \n",
-    "    rand_sample = np.random.choice(pop_ages[0, sample_size)\n",
+    "    rand_sample = np.random.choice(pop_ages[0], sample_size)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    sample_mean = rand_sample.mean()\n",
