--- a/index.ipynb
+++ b/index.ipynb
@@ -463,7 +463,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "plt.errorbar(n,)"
+   ]
   },
   {
    "cell_type": "markdown",
