Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,8 @@
     }
    ],
    "source": [
-    "plt.errorbar(n, sample_means, \"o\", )"
+    "plt.errorbar(n, sample_means, \"o\")\n",
+    "plt.axhline(y)"
    ]
   },
   {
