--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,7 @@
    ],
    "source": [
     "plt.errorbar(n, sample_means, \"o\")\n",
-    "plt.axhline(y = pop_ages[0],n)"
+    "plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewid)"
    ]
   },
   {
