Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -455,6 +455,7 @@
     }
    ],
    "source": [
+    "plt.errorbar(i, sample_means[i], yerr=margin_of_error, linewidth = 2, fmt = \"o\")\n",
     "plt.errorbar(n, sample_means, \"o\")\n",
     "plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewidth = 1)"
    ]
