--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "for i\n",
+    "for i in range(len(sample_me))\n",
     "plt.errorbar(len(sample_means), sample_means, yerr=margin_of_error, linewidth = 2, fmt = \"o\")\n",
     "# plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewidth = 1)"
    ]
