Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,8 +471,8 @@
     }
    ],
    "source": [
-    "for i in range(1, len(sample_means)):\n",
-    "    plt.errorbar(i, sample_means, yerr=margin_of_error, linewidth = 2, fmt = \"o\")\n",
+    "for i in range(1, len(sample_means)+1):\n",
+    "    plt.errorbar(i, sample_means[i], yerr=margin_of_error, linewidth = 2, fmt = \"o\")\n",
     "# plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewidth = 1)"
    ]
   },
