Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -445,10 +445,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f24f3c49cf8>"
+       "<matplotlib.lines.Line2D at 0x7f24f3d0f5f8>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +468,8 @@
    "source": [
     "for i in range(1, len(sample_means)):\n",
     "    plt.errorbar(i, sample_means[i], yerr=margin_of_error, linewidth = 2, fmt = \"o\")\n",
-    "plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewidth = 1, label = \"Population mean = {}\".format(pop_ages[0]]))"
+    "plt.axhline(y = pop_ages[0].mean(), color= \"red\", linewidth = 1, label = \"Population mean = {}\".format(pop_ages[0].mean()))\n",
+    "plt.l"
    ]
   },
   {
